--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "express": "^4.18.3",
     "node-fetch": "^2.7.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
   "scripts": {
+    "serve": "nodemon ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
